
syntax = "proto3";

import "google/protobuf/timestamp.proto";

package expense;

option go_package="github.com/MikeMwita/fedha-go-gen.grpc/expense";



message ExpenseRequest {
  string title = 1;
  double amount = 2;
  string category = 3;
  google.protobuf.Timestamp date = 4;
}

message GetExpenseRequest {
  string expense_id = 1;
}

message UpdateExpenseRequest {
  string expense_id = 1;
  string title = 2;
  double amount = 3;
  string category = 4;
  google.protobuf.Timestamp date = 5;
}

message DeleteExpenseRequest {
  string expense_id = 1;
}

message ExpenseResponse {
  string expense_id = 1;
  string title = 2;
  double amount = 3;
  string category = 4;
  google.protobuf.Timestamp date = 5;
}

message DeleteExpenseResponse {
  string message = 1;
}